feat: 🎸 add styles

--- a/src/ImdbEntity/style.css
+++ b/src/ImdbEntity/style.css
@@ -1,8 +1,7 @@
 .imdbEntities {
   border: 1px solid lightgray;
   width: 224px;
+  margin: 12px;
   padding: 12px;
-}
-
-.imdbEntitiesTitle {
+  display: inline-block;
 }
