--- a/src/App/style.css
+++ b/src/App/style.css
@@ -8,3 +8,12 @@ body {
   font-family: sans-serif;
   color: #333;
 }
+
+#app {
+  margin: 36px;
+}
+
+.appTitle {
+  font-size: 3rem;
+  font-weight: 100;
+}
